// Copyright Â© 2019 Binance
//
// This file is part of Binance. The full Binance copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";
package binance.tsslib.ecdsa.signing;
option go_package = "ecdsa/signing";


/*
 * Represents a BROADCAST message sent to all parties during Round 4 of the ECDSA TSS signing protocol.
 */
message SignRound1Message {
    bytes SigmaShare = 1;
    bytes Rx = 2;
    bytes Ry = 3;
}

/*
 * Represents a BROADCAST message sent to all parties during Identification Round 1 of the ECDSA TSS signing protocol.
 */
message IdentificationRound1Message1 {
    bytes H = 1;
    repeated bytes MulProof = 2;
    repeated bytes Djis = 3;
    repeated bytes Fjis = 4;
}

/*
 * Represents a P2P message sent to all parties during Identification Round 1 of the ECDSA TSS signing protocol.
 */
message IdentificationRound1Message2 {
    repeated bytes AffgProofs = 1;
    repeated bytes DecProof = 2;
}

/*
 * Container for LocalDump
 */
message LocalDumpPB {
    int32 Index = 1;
    int32 RoundNum = 2;

    bytes LTw = 4;
    repeated bytes LTBigWs = 5;
    bytes LTm = 6;
    bytes LTKeyDerivationDelta = 7;
    bytes LTssidNonce = 8;

    bytes LTssid = 9;
    bytes LTKShare = 10;
    bytes LTChiShare = 11;
    repeated bytes LTBigR = 12;

    bytes LTSigmaShare = 13;

    // identification
    bytes LTK = 14;
    repeated bytes LTr1msgK = 15;
    repeated bytes LTChiShareAlphas = 16;
    repeated bytes LTChiShareBetas = 17;
    repeated bytes LTr2msgChiD = 18;

    repeated bytes LTChiMtAFs = 19;
    repeated bytes LTChiMtADs = 20;
    repeated bytes LTChiMtADProofs = 21;
    repeated bytes LTChiMtABetaNeg = 22;
    repeated bytes LTChiMtASij = 23;
    repeated bytes LTChiMtARij = 24;

    repeated bytes LTr4msgSigmaShare = 25;

    repeated bytes LTr5msgH = 26;
    repeated bytes LTr5msgProofMulstar = 27;
    repeated bytes LTr5msgDjis = 28;
    repeated bytes LTr5msgFjis = 29;

    repeated bytes LTr5msgProofAffgs = 31;
    repeated bytes LTr5msgProofDec = 32;
}
